integrate product apis
